# x5-ner-service

./: .dockerignore  .env  Dockerfile  Dockerfile.local  NER_INTEGRATION.md  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  env.example  gunicorn.conf.py  install_dependencies.sh  log.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  api.py  main.py  models.py
app/core/: __init__.py  config.py  health.py  logging.py  timing.py
app/service/: __init__.py  brands_types.py  features.py  pipeline.py  postprocess.py  rules.py  stacked_crf.py  tokenizer.py
app/tests/: __init__.py  test_api_predict.py  test_bio_merge.py  test_regex_rules.py
datasets/: README.md  processing_dataset_from_kaggle.py
models/: README.md
research/: crf_unizenie_petuhov.ipynb  dataset_new.ipynb  inference_crf.ipynb  train_spacy_best.ipynb  train_spacy_transformer.ipynb
scripts/: mass_api_test.py
scripts/example/: sub_base.csv
